<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ration_profile_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/meal_schedule_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/apportionment_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/shopping_list_tab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ration_details_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>