<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".70"
        android:layout_marginStart="15dip"
        android:layout_marginTop="7dip"
        android:layout_marginBottom="7dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="test"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#131211"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="description"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#716464"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight=".30"
        android:layout_marginTop="7dip"
        android:layout_marginEnd="15dip"
        android:layout_marginBottom="7dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="2000"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/calories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/calories_label"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="4"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/days_label"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@android:drawable/bottom_bar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/members_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="5"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/members_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/members_label"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>